overflow fix

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: sans-serif;
     background-color: #f8f9fa;
+    overflow: hidden;
 }
 
 header {
